--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,57 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">30,614</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">17</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">24,565</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">com.digitalproject.DigitalProjectTestCases</td><td><a href="#m0">launchBrowser</a></td><td rowspan="1">1652953468538</td><td rowspan="1">7326</td></tr><tr class="passedeven"><td><a href="#m1">verifyApplicationInformation</a></td><td rowspan="1">1652953499015</td><td rowspan="1">97</td></tr><tr class="passedeven"><td><a href="#m2">verifyFillingForm</a></td><td rowspan="1">1652953491339</td><td rowspan="1">7675</td></tr><tr class="passedeven"><td><a href="#m3">verifyLoginButton</a></td><td rowspan="1">1652953484590</td><td rowspan="1">6381</td></tr><tr class="passedeven"><td><a href="#m4">verifyLoginPage</a></td><td rowspan="1">1652953475869</td><td rowspan="1">459</td></tr><tr class="passedeven"><td><a href="#m5">verifyPassword</a></td><td rowspan="1">1652953481404</td><td rowspan="1">3184</td></tr><tr class="passedeven"><td><a href="#m6">verifyUsername</a></td><td rowspan="1">1652953476330</td><td rowspan="1">5073</td></tr><tr class="passedeven"><td><a href="#m7">windowMaximizes</a></td><td rowspan="1">1652953490972</td><td rowspan="1">364</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.digitalproject.DigitalProjectTestCases</td><td><a href="#m0">verifyOkButton</a></td><td rowspan="1">1653061771444</td><td rowspan="1">3517</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="17">com.digitalproject.DigitalProjectTestCases</td><td><a href="#m1">launchBrowser</a></td><td rowspan="1">1653061750474</td><td rowspan="1">5956</td></tr><tr class="passedeven"><td><a href="#m2">scrollPage</a></td><td rowspan="1">1653061770847</td><td rowspan="1">17</td></tr><tr class="passedeven"><td><a href="#m3">verifyAddress</a></td><td rowspan="1">1653061770734</td><td rowspan="1">113</td></tr><tr class="passedeven"><td><a href="#m4">verifyAdhaarNumber</a></td><td rowspan="1">1653061770649</td><td rowspan="1">83</td></tr><tr class="passedeven"><td><a href="#m5">verifyApplicationInformation</a></td><td rowspan="1">1653061770375</td><td rowspan="1">85</td></tr><tr class="passedeven"><td><a href="#m6">verifyBirthCheckBox</a></td><td rowspan="1">1653061770866</td><td rowspan="1">84</td></tr><tr class="passedeven"><td><a href="#m7">verifyCheckDate</a></td><td rowspan="1">1653061771093</td><td rowspan="1">192</td></tr><tr class="passedeven"><td><a href="#m8">verifyCheckName</a></td><td rowspan="1">1653061770951</td><td rowspan="1">138</td></tr><tr class="passedeven"><td><a href="#m9">verifyEmailId</a></td><td rowspan="1">1653061770555</td><td rowspan="1">93</td></tr><tr class="passedeven"><td><a href="#m10">verifyFillingForm</a></td><td rowspan="1">1653061769237</td><td rowspan="1">1136</td></tr><tr class="passedeven"><td><a href="#m11">verifyLoginButton</a></td><td rowspan="1">1653061765070</td><td rowspan="1">3839</td></tr><tr class="passedeven"><td><a href="#m12">verifyLoginPage</a></td><td rowspan="1">1653061756440</td><td rowspan="1">384</td></tr><tr class="passedeven"><td><a href="#m13">verifyMobileNumber</a></td><td rowspan="1">1653061770461</td><td rowspan="1">91</td></tr><tr class="passedeven"><td><a href="#m14">verifyPassword</a></td><td rowspan="1">1653061761962</td><td rowspan="1">3107</td></tr><tr class="passedeven"><td><a href="#m15">verifySaveForm</a></td><td rowspan="1">1653061771290</td><td rowspan="1">153</td></tr><tr class="passedeven"><td><a href="#m16">verifyUsername</a></td><td rowspan="1">1653061756825</td><td rowspan="1">5135</td></tr><tr class="passedeven"><td><a href="#m17">windowMaximizes</a></td><td rowspan="1">1653061768911</td><td rowspan="1">325</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.digitalproject.DigitalProjectTestCases#launchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.digitalproject.DigitalProjectTestCases#verifyApplicationInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.digitalproject.DigitalProjectTestCases#verifyFillingForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.digitalproject.DigitalProjectTestCases#verifyLoginButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.digitalproject.DigitalProjectTestCases#verifyLoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.digitalproject.DigitalProjectTestCases#verifyPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.digitalproject.DigitalProjectTestCases#verifyUsername</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.digitalproject.DigitalProjectTestCases#windowMaximizes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.digitalproject.DigitalProjectTestCases#verifyOkButton</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at com.digitalproject.DigitalProjectTestCases.verifyOkButton(DigitalProjectTestCases.java:123)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:135)
+	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:673)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:220)
+	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
+	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:945)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:193)
+	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.util.ArrayList.forEach(ArrayList.java:1259)
+	at org.testng.TestRunner.privateRun(TestRunner.java:808)
+	at org.testng.TestRunner.run(TestRunner.java:603)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:429)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:423)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:383)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:326)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1249)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1169)
+	at org.testng.TestNG.runSuites(TestNG.java:1092)
+	at org.testng.TestNG.run(TestNG.java:1060)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.digitalproject.DigitalProjectTestCases#launchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.digitalproject.DigitalProjectTestCases#scrollPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.digitalproject.DigitalProjectTestCases#verifyAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.digitalproject.DigitalProjectTestCases#verifyAdhaarNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.digitalproject.DigitalProjectTestCases#verifyApplicationInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.digitalproject.DigitalProjectTestCases#verifyBirthCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.digitalproject.DigitalProjectTestCases#verifyCheckDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.digitalproject.DigitalProjectTestCases#verifyCheckName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.digitalproject.DigitalProjectTestCases#verifyEmailId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.digitalproject.DigitalProjectTestCases#verifyFillingForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.digitalproject.DigitalProjectTestCases#verifyLoginButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">com.digitalproject.DigitalProjectTestCases#verifyLoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">com.digitalproject.DigitalProjectTestCases#verifyMobileNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">com.digitalproject.DigitalProjectTestCases#verifyPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">com.digitalproject.DigitalProjectTestCases#verifySaveForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">com.digitalproject.DigitalProjectTestCases#verifyUsername</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">com.digitalproject.DigitalProjectTestCases#windowMaximizes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
