--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.launchBrowser()[pri:-20, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">launchBrowser</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.launchBrowser()[pri:-21, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">launchBrowser</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:59</td>   <td>30478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyApplicationInformation()[pri:-13, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyApplicationInformation</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.scrollPage()[pri:-7, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">scrollPage</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:51</td>   <td>22802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyFillingForm()[pri:-14, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyFillingForm</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyAddress()[pri:-9, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyAddress</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:44</td>   <td>16053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginButton()[pri:-16, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyLoginButton</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyAdhaarNumber()[pri:-10, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyAdhaarNumber</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:35</td>   <td>7332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginPage()[pri:-19, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyLoginPage</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>19909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyApplicationInformation()[pri:-13, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyApplicationInformation</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:41</td>   <td>12867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyPassword()[pri:-17, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyPassword</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyBirthCheckBox()[pri:-6, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyBirthCheckBox</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:36</td>   <td>7793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyUsername()[pri:-18, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyUsername</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:31</td>   <td>20627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyCheckDate()[pri:-4, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyCheckDate</td> 
   <td>main@1027007693</td>   <td></td> </tr>
-<tr bgcolor="a6bcd4">  <td>22/05/19 15:14:50</td>   <td>22435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.windowMaximizes()[pri:-15, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">windowMaximizes</td> 
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyCheckName()[pri:-5, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyCheckName</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>20089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyEmailId()[pri:-11, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyEmailId</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:29</td>   <td>18770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyFillingForm()[pri:-14, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyFillingForm</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:25</td>   <td>14604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginButton()[pri:-17, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyLoginButton</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:16</td>   <td>5974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginPage()[pri:-20, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyLoginPage</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:30</td>   <td>19995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyMobileNumber()[pri:-12, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyMobileNumber</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:31</td>   <td>20978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyOkButton()[pri:-2, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyOkButton</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:21</td>   <td>11496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyPassword()[pri:-18, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyPassword</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:31</td>   <td>20824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifySaveForm()[pri:-3, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifySaveForm</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:16</td>   <td>6359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyUsername()[pri:-19, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">verifyUsername</td> 
+  <td>main@1027007693</td>   <td></td> </tr>
+<tr bgcolor="a6bcd4">  <td>22/05/20 21:19:28</td>   <td>18445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.windowMaximizes()[pri:-16, instance:com.digitalproject.DigitalProjectTestCases@1f021e6c]">windowMaximizes</td> 
   <td>main@1027007693</td>   <td></td> </tr>
 </table>
