--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sujat\AppData\Local\Temp\testng-eclipse--1694020495\testng-customsuite.xml</span>
+                    <span>C:\Users\Paresh\AppData\Local\Temp\testng-eclipse--1698592926\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -230,27 +230,27 @@
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
 	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:135)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:673)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:220)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:945)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:193)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.util.ArrayList.forEach(ArrayList.java:1259)
-	at org.testng.TestRunner.privateRun(TestRunner.java:808)
-	at org.testng.TestRunner.run(TestRunner.java:603)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:429)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:423)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:383)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:326)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1249)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1169)
-	at org.testng.TestNG.runSuites(TestNG.java:1092)
-	at org.testng.TestNG.run(TestNG.java:1060)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
@@ -390,7 +390,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sujat\AppData\Local\Temp\testng-eclipse--1694020495\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Paresh\AppData\Local\Temp\testng-eclipse--1698592926\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -441,82 +441,82 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(18);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchBrowser')
+data.setCell(0, 1, 'verifyLoginButton')
 data.setCell(0, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(0, 3, 5956);
+data.setCell(0, 3, 31705);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyUsername')
+data.setCell(1, 1, 'verifyFillingForm')
 data.setCell(1, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(1, 3, 5135);
+data.setCell(1, 3, 8272);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginButton')
+data.setCell(2, 1, 'launchBrowser')
 data.setCell(2, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(2, 3, 3839);
+data.setCell(2, 3, 7772);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyOkButton')
+data.setCell(3, 1, 'verifyUsername')
 data.setCell(3, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(3, 3, 3517);
+data.setCell(3, 3, 5107);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyPassword')
+data.setCell(4, 1, 'verifyOkButton')
 data.setCell(4, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(4, 3, 3107);
+data.setCell(4, 3, 4045);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyFillingForm')
+data.setCell(5, 1, 'verifyPassword')
 data.setCell(5, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(5, 3, 1136);
+data.setCell(5, 3, 3098);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyLoginPage')
+data.setCell(6, 1, 'windowMaximizes')
 data.setCell(6, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(6, 3, 384);
+data.setCell(6, 3, 319);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'windowMaximizes')
+data.setCell(7, 1, 'verifyLoginPage')
 data.setCell(7, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(7, 3, 325);
+data.setCell(7, 3, 185);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'verifyCheckDate')
+data.setCell(8, 1, 'verifyEmailId')
 data.setCell(8, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(8, 3, 192);
+data.setCell(8, 3, 119);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'verifySaveForm')
+data.setCell(9, 1, 'verifyApplicationInformation')
 data.setCell(9, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(9, 3, 153);
+data.setCell(9, 3, 115);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'verifyCheckName')
+data.setCell(10, 1, 'verifyMobileNumber')
 data.setCell(10, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(10, 3, 138);
+data.setCell(10, 3, 110);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'verifyAddress')
+data.setCell(11, 1, 'verifyCheckDate')
 data.setCell(11, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(11, 3, 113);
+data.setCell(11, 3, 107);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'verifyEmailId')
+data.setCell(12, 1, 'verifyCheckName')
 data.setCell(12, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(12, 3, 93);
+data.setCell(12, 3, 106);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'verifyMobileNumber')
+data.setCell(13, 1, 'verifyAddress')
 data.setCell(13, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(13, 3, 91);
+data.setCell(13, 3, 99);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'verifyApplicationInformation')
+data.setCell(14, 1, 'verifyAdhaarNumber')
 data.setCell(14, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(14, 3, 85);
+data.setCell(14, 3, 97);
 data.setCell(15, 0, 15)
 data.setCell(15, 1, 'verifyBirthCheckBox')
 data.setCell(15, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(15, 3, 84);
+data.setCell(15, 3, 81);
 data.setCell(16, 0, 16)
-data.setCell(16, 1, 'verifyAdhaarNumber')
+data.setCell(16, 1, 'verifySaveForm')
 data.setCell(16, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(16, 3, 83);
+data.setCell(16, 3, 76);
 data.setCell(17, 0, 17)
 data.setCell(17, 1, 'scrollPage')
 data.setCell(17, 2, 'com.digitalproject.DigitalProjectTestCases')
-data.setCell(17, 3, 17);
+data.setCell(17, 3, 13);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -549,73 +549,73 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginPage</span>
-                <span class="method-start">5966 ms</span>
+                <span class="method-start">7781 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyUsername</span>
-                <span class="method-start">6351 ms</span>
+                <span class="method-start">7969 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyPassword</span>
-                <span class="method-start">11488 ms</span>
+                <span class="method-start">13079 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginButton</span>
-                <span class="method-start">14596 ms</span>
+                <span class="method-start">16179 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">windowMaximizes</span>
-                <span class="method-start">18437 ms</span>
+                <span class="method-start">47886 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyFillingForm</span>
-                <span class="method-start">18763 ms</span>
+                <span class="method-start">48208 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyApplicationInformation</span>
-                <span class="method-start">19901 ms</span>
+                <span class="method-start">56482 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyMobileNumber</span>
-                <span class="method-start">19987 ms</span>
+                <span class="method-start">56599 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyEmailId</span>
-                <span class="method-start">20081 ms</span>
+                <span class="method-start">56711 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAdhaarNumber</span>
-                <span class="method-start">20175 ms</span>
+                <span class="method-start">56831 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAddress</span>
-                <span class="method-start">20260 ms</span>
+                <span class="method-start">56930 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">scrollPage</span>
-                <span class="method-start">20373 ms</span>
+                <span class="method-start">57031 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyBirthCheckBox</span>
-                <span class="method-start">20392 ms</span>
+                <span class="method-start">57045 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCheckName</span>
-                <span class="method-start">20477 ms</span>
+                <span class="method-start">57127 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCheckDate</span>
-                <span class="method-start">20619 ms</span>
+                <span class="method-start">57236 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifySaveForm</span>
-                <span class="method-start">20816 ms</span>
+                <span class="method-start">57344 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">verifyOkButton</span>
-                <span class="method-start">20970 ms</span>
+                <span class="method-start">57422 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
