--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyAdhaarNumber()[pri:-10, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyAdhaarNumber</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyCheckDate()[pri:-4, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyCheckDate</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyCheckName()[pri:-5, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyCheckName</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:09</td>   <td>-43752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyPassword()[pri:-18, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyPassword</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyBirthCheckBox()[pri:-6, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyBirthCheckBox</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>-349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyApplicationInformation()[pri:-13, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyApplicationInformation</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:04</td>   <td>-48862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyUsername()[pri:-19, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyUsername</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>-232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyMobileNumber()[pri:-12, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyMobileNumber</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:04</td>   <td>-49050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginPage()[pri:-20, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyLoginPage</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:44</td>   <td>-8623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyFillingForm()[pri:-14, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyFillingForm</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.scrollPage()[pri:-7, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">scrollPage</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifySaveForm()[pri:-3, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifySaveForm</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:44</td>   <td>-8945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.windowMaximizes()[pri:-16, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">windowMaximizes</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>-120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyEmailId()[pri:-11, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyEmailId</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:53</td>   <td>99</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyAddress()[pri:-9, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyAddress</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:54</td>   <td>591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyOkButton()[pri:-2, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyOkButton</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:34:12</td>   <td>-40652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.verifyLoginButton()[pri:-17, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">verifyLoginButton</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
-<tr bgcolor="8c7381">  <td>22/06/13 15:33:56</td>   <td>-56833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DigitalProjectTestCases.launchBrowser()[pri:-21, instance:com.digitalproject.DigitalProjectTestCases@78186a70]">launchBrowser</td> 
-  <td>main@1795960102</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>22/06/23 19:59:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestCase.closeBrowser()[pri:0, instance:com.digitalproject.HomePageTestCase@7d8995e]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2109798150</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>22/06/23 19:59:51</td>   <td>-7481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestCase.openBrowser()[pri:0, instance:com.digitalproject.HomePageTestCase@7d8995e]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@2109798150</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>22/06/23 19:59:58</td>   <td>-685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestCase.m1()[pri:0, instance:com.digitalproject.HomePageTestCase@7d8995e]">m1</td> 
+  <td>main@2109798150</td>   <td></td> </tr>
 </table>
