--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,57 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">17</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">61,529</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,674</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.digitalproject.DigitalProjectTestCases</td><td><a href="#m0">verifyOkButton</a></td><td rowspan="1">1655114694021</td><td rowspan="1">4045</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="17">com.digitalproject.DigitalProjectTestCases</td><td><a href="#m1">launchBrowser</a></td><td rowspan="1">1655114636599</td><td rowspan="1">7772</td></tr><tr class="passedeven"><td><a href="#m2">scrollPage</a></td><td rowspan="1">1655114693630</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m3">verifyAddress</a></td><td rowspan="1">1655114693529</td><td rowspan="1">99</td></tr><tr class="passedeven"><td><a href="#m4">verifyAdhaarNumber</a></td><td rowspan="1">1655114693430</td><td rowspan="1">97</td></tr><tr class="passedeven"><td><a href="#m5">verifyApplicationInformation</a></td><td rowspan="1">1655114693081</td><td rowspan="1">115</td></tr><tr class="passedeven"><td><a href="#m6">verifyBirthCheckBox</a></td><td rowspan="1">1655114693644</td><td rowspan="1">81</td></tr><tr class="passedeven"><td><a href="#m7">verifyCheckDate</a></td><td rowspan="1">1655114693835</td><td rowspan="1">107</td></tr><tr class="passedeven"><td><a href="#m8">verifyCheckName</a></td><td rowspan="1">1655114693726</td><td rowspan="1">106</td></tr><tr class="passedeven"><td><a href="#m9">verifyEmailId</a></td><td rowspan="1">1655114693310</td><td rowspan="1">119</td></tr><tr class="passedeven"><td><a href="#m10">verifyFillingForm</a></td><td rowspan="1">1655114684807</td><td rowspan="1">8272</td></tr><tr class="passedeven"><td><a href="#m11">verifyLoginButton</a></td><td rowspan="1">1655114652778</td><td rowspan="1">31705</td></tr><tr class="passedeven"><td><a href="#m12">verifyLoginPage</a></td><td rowspan="1">1655114644380</td><td rowspan="1">185</td></tr><tr class="passedeven"><td><a href="#m13">verifyMobileNumber</a></td><td rowspan="1">1655114693198</td><td rowspan="1">110</td></tr><tr class="passedeven"><td><a href="#m14">verifyPassword</a></td><td rowspan="1">1655114649678</td><td rowspan="1">3098</td></tr><tr class="passedeven"><td><a href="#m15">verifySaveForm</a></td><td rowspan="1">1655114693943</td><td rowspan="1">76</td></tr><tr class="passedeven"><td><a href="#m16">verifyUsername</a></td><td rowspan="1">1655114644568</td><td rowspan="1">5107</td></tr><tr class="passedeven"><td><a href="#m17">windowMaximizes</a></td><td rowspan="1">1655114684485</td><td rowspan="1">319</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.digitalproject.HomePageTestCase</td><td><a href="#m0">m1</a></td><td rowspan="1">1655994598443</td><td rowspan="1">663</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.digitalproject.DigitalProjectTestCases#verifyOkButton</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.digitalproject.DigitalProjectTestCases.verifyOkButton(DigitalProjectTestCases.java:123)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.ArrayList.forEach(ArrayList.java:1259)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.digitalproject.DigitalProjectTestCases#launchBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.digitalproject.DigitalProjectTestCases#scrollPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.digitalproject.DigitalProjectTestCases#verifyAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.digitalproject.DigitalProjectTestCases#verifyAdhaarNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.digitalproject.DigitalProjectTestCases#verifyApplicationInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.digitalproject.DigitalProjectTestCases#verifyBirthCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.digitalproject.DigitalProjectTestCases#verifyCheckDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.digitalproject.DigitalProjectTestCases#verifyCheckName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.digitalproject.DigitalProjectTestCases#verifyEmailId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.digitalproject.DigitalProjectTestCases#verifyFillingForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">com.digitalproject.DigitalProjectTestCases#verifyLoginButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">com.digitalproject.DigitalProjectTestCases#verifyLoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">com.digitalproject.DigitalProjectTestCases#verifyMobileNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m14">com.digitalproject.DigitalProjectTestCases#verifyPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m15">com.digitalproject.DigitalProjectTestCases#verifySaveForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m16">com.digitalproject.DigitalProjectTestCases#verifyUsername</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m17">com.digitalproject.DigitalProjectTestCases#windowMaximizes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.digitalproject.HomePageTestCase#m1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
